--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "minimum-stability": "stable",
+    "version" : "1.0",
     "autoload": {
         "psr-4": {"balakarthikeyan\\HelloComposer\\": "src/"}
     }
