--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
             "email": "balakarthikeyan07@gmail.com"
         }
     ],
-    "version" : "1.0",
+    "minimum-stability": "dev",
+    "version" : "1.1",
     "autoload": {
         "psr-4": {"balakarthikeyan\\HelloComposer\\": "src/"}
     }
